Fixed button overlap on smaller mobile devices

--- a/src/map/css/_modal.styl
+++ b/src/map/css/_modal.styl
@@ -260,7 +260,8 @@
   width 200px
 
 .subscribe-submit.narrow
-  width 125px
+  width 115px
+  font-size 12px !important
 
 .subscribe-submit.left
   float left
